# golf-swing-trainer

./: .gitignore  README.md  pyproject.toml
App/: README.md  pubspec.yaml
App/android/app/: build.gradle
App/android/app/src/main/: AndroidManifest.xml
App/android/app/src/main/java/com/capstonedreamteam/app/: MainActivity.java
App/android/app/src/profile/: AndroidManifest.xml
App/ios/Runner/: Info.plist
App/ios/Runner.xcodeproj/: project.pbxproj
App/lib/: main.dart
App/lib/data/: footer_items.dart  progress.dart
App/lib/pages/: camera_screen.dart  captures_screen.dart  home.dart  preview_screen.dart  stats_screen.dart
App/test/: widget_test.dart
backend/: README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/archive/: ball_detection_experiment.py  ball_detection_video_experiment.py  ball_tracking.py  crop_and_display_image.py  show_video.py
backend/archive/gait analysis/: gait.py
backend/assets/sample-bad-swings/: arm_bend.mov  feet_position.mov  hand_position.mov  knee_bend.mov
backend/data_extraction/: BALL_DETECTION.md  ball_detection.py  pose_detection.py  video_analysis.py
backend/metrics/: METRIC_CALCULATIONS.md  body_position_data.csv  data_extraction.csv  metric_calculations.py
backend/static/: .gitignore
backend/tests/: test_data_extraction.py
docs/: flowchart.drawio
playground/: ball_detection.py
playground/archive/: ball_tracking.py
