[tool.poetry]
name = "golf-swing-trainer"
version = "0.1.0"
description = ""
authors = ["Josh Karbi <jkarbi3@uwo.ca>"]

[tool.poetry.dependencies]
python = ">= 3.7, <= 3.9"
opencv-python = "^4.5.4"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
